compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-4/neg/1.3.kt
/*
 * KOTLIN PSI SPEC TEST (NEGATIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 4 -> sentence 1
 * NUMBER: 3
 * DESCRIPTION: Real literals with float suffix not at the end and underscores at the different positions.
 */

konst konstue = 0_0.0f0____0e0

konst konstue = .0f0_0e-0
konst konstue = 2_2.0_0F9E9
konst konstue = .0_0_0F0e1

konst konstue = 1.0F1____0e
konst konstue = .0___0F9e+f
konst konstue = 2________000.00________0f5ef
konst konstue = .0_0_0_0F1EF2EF3EF4EF5EF6EF7EF8EF9
konst konstue = 0________1.0f7e+0_0F
konst konstue = .00F00000_____0000000e-000000000000_0
konst konstue = 000_0000.000f9E0_00000000000_0F
konst konstue = .0__00__0f2e+0__00000000000__0
konst konstue = .0__0F4E+F

konst konstue = .8____8888888888____888888888888888888888888888____888888888888888____88888888888888888888____88888888888888____88888888888888888888888888888____88888888888888888888888888____8888888888888888888888____8888888888888888f8e+0
konst konstue = .00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000___0f8e8_____0
konst konstue = 00000_____1123123.00000000000000000000000000000000000000000000000000000000000000000000000___0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f0E000000_____1
konst konstue = .0__00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f6E0____10
